test/embedded/mirror.code
// RUN: %target-language-emit-ir -verify %s -enable-experimental-feature Embedded -wmo

// REQUIRES: language_in_compiler
// REQUIRES: optimized_stdlib
// REQUIRES: language_feature_Embedded

public struct MyStruct {
  var a, b, c: Int
}

public fn foo(s: MyStruct) {
  immutable mirror = Mirror(reflecting: s) // expected-error {{'Mirror' is unavailable}}
  _ = mirror.children
}